[package]
name = "metrist-ebpf-agent"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
futures = "0.3"
h2 = { path = "h2" }
hex = "0.4.3"
hexdump = "0.1.1"
redbpf = { git = "https://github.com/redsift/redbpf", features = ["load"] }
rlimit = "0.8.3"
sysinfo = "0.26.2"
tokio = { version = "1.0", features = ["rt", "signal", "time", "io-util", "net", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
uname = "0.1.1"

probes = { path = "./probes" }
